Task7/gatekeeper/constraint-templates/hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockhostpath
  annotations:
    description: "Запрет монтирования томов типа hostPath"
spec:
  crd:
    spec:
      names:
        kind: K8sBlockHostPath
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockhostpath

        violation[{"msg": msg}] {
          volume := input.review.object.spec.volumes[_]
          has_field(volume, "hostPath")
          msg := sprintf("Volume '%v' uses hostPath, which is not allowed", [volume.name])
        }

        has_field(obj, field) {
          _ = obj[field]
        }
